@@ -1,3 +1,4 @@
+	* fixed broadcast_lsd option
 	* fixed udp-socket race condition when using a proxy
 	* end-game mode optimizations
 	* fixed bug in udp_socket causing it to issue two simultaneous async. read operations
